测试短链服务

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "base62": "^2.0.1",
     "cache-manager": "^5.3.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
