--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/qrcode": "^1.5.5",
     "base62": "^2.0.1",
     "cache-manager": "^5.3.1",
     "cache-manager-redis-store": "^3.0.1",
@@ -38,6 +39,7 @@
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "qrcode": "^1.5.3",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
