--- a/apps/my-service/src/.env
+++ b/apps/my-service/src/.env
@@ -1,5 +1,5 @@
 # redis 相关配置
-redis_server_host=localhost
+redis_server_host=119.3.79.27
 redis_server_port=6379
 redis_server_db=1
 
@@ -10,7 +10,7 @@ nodemailer_auth_user=913693464@qq.com
 nodemailer_auth_pass=elqxogfmtutcbahf
 
 # mysql 相关配置
-mysql_server_host=localhost
+mysql_server_host=119.3.79.27
 mysql_server_port=3306
 mysql_server_username=root
 mysql_server_password=20090909
