--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "runtimeExecutable": "pnpm",
             "args": [
                 "run",
-                "start:dev"
+                "start:debug"
             ],
             "console": "integratedTerminal",
         }
